--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,10 @@ dependencies = [
     "streamlit (>=1.41.1,<2.0.0)"
 ]
 
+[tool.poetry]
+packages = [{include = "."}]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
