--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,16 @@
-[project]
+[tool.poetry]
 name = "content-moderation"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Alex Yang",email = "ayang@roblox.com"}
-]
+authors = ["Alex Yang <ayang@roblox.com>"]
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-    "gradio (>=5.13.0,<6.0.0)",
-    "anthropic (>=0.45.0,<0.46.0)",
-    "streamlit (>=1.41.1,<2.0.0)"
-]
-
-[tool.poetry]
 packages = [{include = "."}]
+
+[tool.poetry.dependencies]
+python = ">=3.10"
+gradio = ">=5.13.0,<6.0.0"
+anthropic = ">=0.45.0,<0.46.0"
+streamlit = ">=1.41.1,<2.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
