--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10"
 gradio = ">=5.13.0,<6.0.0"
 anthropic = ">=0.45.0,<0.46.0"
 streamlit = ">=1.41.1,<2.0.0"
+openai = "^1.60.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
